Add KDE Git repository URL

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = yakuake
 url = https://download.kde.org/stable/yakuake/3.0.5/src/yakuake-3.0.5.tar.xz
 archives = 
-giturl = 
+giturl = https://anongit.kde.org/yakuake.git
 
 [autospec]
 # build 32 bit libraries
