Re-autospec to refresh packaging; rebuild for GCC 10
Signed-off-by: Patrick McCarty <patrick.mccarty@intel.com>

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = yakuake
-url = https://download.kde.org/stable/release-service/20.08.2/src/yakuake-20.08.2.tar.xz
+url = https://download.kde.org/stable/yakuake/3.0.5/src/yakuake-3.0.5.tar.xz
 archives = 
 giturl = https://invent.kde.org/utilities/yakuake.git
 domain = 
